[package]
name = "ml_web_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.17.0"
anyhow = "1.0.52"
tch = "0.6.1"
actix-web = "4.0.0-beta.20"
serde = "1.0.133"
mime = "0.3.16"
env_logger = "0.9.0"
actix-cors = "0.6.0-beta.8"
